--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juventud por el Cambio</title>
+    <!-- Agenda Legislativa / Hoja de Ruta / Propuestas de Gobierno -->
+    <title>Agenda Legislativa</title>
   </head>
   <body>
     <div id="root"></div>
